After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 710202 - gst-rtsp-server: Improve unit tests (and fix bugs) for media factory permissions
gst-rtsp-server: Improve unit tests (and fix bugs) for media factory permissions
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-rtsp-server
git master
Other All
: Normal normal
: 1.2.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-10-15 17:05 UTC by Sebastian Rasmussen
Modified: 2014-02-25 22:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Proposed patch for checking return values. (5.15 KB, patch)
2013-10-15 17:05 UTC, Sebastian Rasmussen
none Details | Review
Proposed patch for testing mediafactory permissions (3.85 KB, patch)
2013-10-15 17:05 UTC, Sebastian Rasmussen
none Details | Review
Proposed patch for checking return values. (5.15 KB, patch)
2013-10-19 15:49 UTC, Sebastian Rasmussen
committed Details | Review
Proposed patch for fixing bugs discovered when writing new unit tests. (2.05 KB, patch)
2013-10-19 15:51 UTC, Sebastian Rasmussen
committed Details | Review
Proposed patch for adding new unit tests for RTSP permissions. (5.61 KB, patch)
2013-10-19 15:52 UTC, Sebastian Rasmussen
none Details | Review
Proposed patch for testing mediafactory permissions. (3.55 KB, patch)
2013-10-19 15:53 UTC, Sebastian Rasmussen
committed Details | Review
Proposed patch for adding new unit tests for RTSP permissions. (5.61 KB, patch)
2013-10-19 17:32 UTC, Sebastian Rasmussen
none Details | Review
Proposed patch for adding new unit tests for RTSP permissions. (5.61 KB, patch)
2013-10-19 17:36 UTC, Sebastian Rasmussen
committed Details | Review

Description Sebastian Rasmussen 2013-10-15 17:05:02 UTC
Created attachment 257372 [details] [review]
Proposed patch for checking return values.

And a trivial patch for verifying the return value of gst_rtsp_url_parse() in all tests.

Enjoy!
Comment 1 Sebastian Rasmussen 2013-10-15 17:05:32 UTC
Created attachment 257373 [details] [review]
Proposed patch for testing mediafactory permissions
Comment 2 Sebastian Rasmussen 2013-10-19 15:49:30 UTC
Created attachment 257712 [details] [review]
Proposed patch for checking return values.
Comment 3 Sebastian Rasmussen 2013-10-19 15:51:09 UTC
Created attachment 257713 [details] [review]
Proposed patch for fixing bugs discovered when writing new unit tests.

I found a few bugs while writing unit tests, let's squash them before adding the failing tests to keep gst-rtsp-server building for every commit.
Comment 4 Sebastian Rasmussen 2013-10-19 15:52:15 UTC
Created attachment 257714 [details] [review]
Proposed patch for adding new unit tests for RTSP permissions.

Keeping the permissions unit tests separate keeps mediafactory tests dedicated to mediafactory. This is a better approach than I used previously.
Comment 5 Sebastian Rasmussen 2013-10-19 15:53:22 UTC
Created attachment 257715 [details] [review]
Proposed patch for testing mediafactory permissions.

Revised patch that removes the permissions-specific unit tests, and retains the mediafactory related permissions tests.
Comment 6 Sebastian Rasmussen 2013-10-19 17:32:32 UTC
Created attachment 257723 [details] [review]
Proposed patch for adding new unit tests for RTSP permissions.

D'oh. Don't leave unnecessary whitespace in there....
Comment 7 Sebastian Rasmussen 2013-10-19 17:36:21 UTC
Created attachment 257724 [details] [review]
Proposed patch for adding new unit tests for RTSP permissions.

Double D'oh! Yes, do update with less whitespace damage, but then upload the _new_ patch, not the same old patch. :-/
Comment 8 Wim Taymans 2013-11-12 09:31:54 UTC
commit a2eb48a27c4a68e1cbadf5a57055ac15046014c3
Author: Sebastian Rasmussen <sebras@hotmail.com>
Date:   Sat Oct 19 17:36:05 2013 +0200

    tests: Add unit tests for permissions
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=710202

commit c0828a5d53648d6140fc8c37c52a92d60e9137f5
Author: Sebastian Rasmussen <sebras@hotmail.com>
Date:   Tue Oct 15 18:50:47 2013 +0200

    tests: Test mediafactory permissions
    
    See https://bugzilla.gnome.org/show_bug.cgi?id=710202

commit 4036f210af2ae6081b5c79971a9068ab43421b7a
Author: Sebastian Rasmussen <sebras@hotmail.com>
Date:   Sat Oct 19 17:39:35 2013 +0200

    permissions: Fix refcounting when adding/removing roles
    
    Previously a role that was removed was unreffed twice, and when
    replacing an existing role the replaced role was freed while still being
    referenced. Both bugs are now fixed.
    
    See https://bugzilla.gnome.org/show_bug.cgi?id=710202

commit eee8b0db8835716e81e9c42c1f9ee58dbb04e2f1
Author: Sebastian Rasmussen <sebras@hotmail.com>
Date:   Tue Oct 15 18:01:38 2013 +0200

    tests: Check gst_rtsp_url_parse return value
    
    See https://bugzilla.gnome.org/show_bug.cgi?id=710202